--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "leaflet": "^1.3.3",
+    "leaflet.markercluster": "^1.4.1",
     "localforage": "^1.7.3",
     "marked": "^0.5.1",
     "moment": "^2.22.2",
